<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              app:layout_behavior="@string/appbar_scrolling_view_behavior"
              tools:context="com.ranchosoftware.speedymovinginventory.LoginActivity">
    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:visibility="gone"
        android:id="@+id/login_progress"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/login_form"
        android:layout_margin="8dp">
    <!-- Login progress -->

        <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_alignParentBottom="true"
        android:id="@+id/signup_form">

        <Button
            android:id="@+id/forgot_password_button"
            android:text="@string/action_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>



        <LinearLayout
            android:id="@+id/login_form_lower"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/email_login_form">

                <ImageView
                    app:srcCompat="@drawable/speedy_logo"
                    android:id="@+id/logo"
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:text="@string/welcome_to"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView12"
                    android:gravity="center_horizontal"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:textColor="@color/Black"/>

                <TextView
                    android:text="@string/speedy_moving_inventory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView8"
                    android:gravity="center_horizontal"
                    android:textSize="24sp"
                    android:textColor="@color/Black"
                    android:paddingBottom="10dp"/>

                <TextView
                    android:text="@string/please_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView13"
                    android:textColor="@color/Black"
                    android:gravity="center_horizontal"
                    android:layout_marginBottom="4dp"
                    android:paddingBottom="6dp"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/tvEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:imeOptions="actionDone"/>

                </android.support.design.widget.TextInputLayout>

                <CheckBox
                    android:text="@string/remember_me"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBoxRememberMe"
                    android:checked="true"/>

                <Button
                    android:id="@+id/email_sign_in_button"
                    android:text="@string/action_sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:layout_alignParentBottom="true"
                    android:id="@+id/linearLayout"
                    android:layout_marginTop="16dp"
                    >

                    <TextView
                        android:text="TextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:textColor="@color/Red"
                        android:id="@+id/loginErrorView"
                        android:visibility="invisible"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


</RelativeLayout>

</LinearLayout>
