<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/content_choose_company"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ChooseCompanyActivity"
    tools:showIn="@layout/activity_choose_company">

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loadingIndicator"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mainLayout"
        android:visibility="visible">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/themeBlueLight">

            <TextView
                android:text="@string/choose_company_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView22"
                android:textAlignment="center"
                android:layout_marginBottom="14dp"
                android:layout_marginTop="14dp"
                android:textColor="@color/White"
                android:textSize="18sp"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/themeBase"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <TextView
                android:text="@string/company_label"
                android:layout_height="wrap_content"
                android:id="@+id/textView38"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:paddingLeft="12dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/White"/>

            <TextView
                android:text="@string/phone_number_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView30"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/White"/>

            <TextView
                android:text="@string/contact_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView26"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/White"/>
        </LinearLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/textView22"
            android:id="@+id/companiesListView"/>

    </LinearLayout>

</RelativeLayout>
