<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:background="@drawable/dialog_rounded_corners"
    >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@color/speedyDark"
        android:layout_height="45dp">

        <TextView
            android:text="@string/about_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/textView17"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="100dp"
            android:layout_marginLeft="100dp"
            android:textSize="22sp"
            android:textColor="@color/almostWhite"
            android:layout_weight="1"
            android:gravity="center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/themeBlueDark">
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            app:srcCompat="@drawable/speedy_logo"
            android:id="@+id/imageView2"
            android:adjustViewBounds="false"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="8dp"/>

        <TextView
            android:text="@string/about_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView35"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center_horizontal"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:text="@string/web_site"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView36"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:gravity="center_horizontal"
            android:paddingBottom="8dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:text="@string/version_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView41"
                android:layout_weight="1"
                android:paddingRight="4dp"/>

            <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvVersion"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:layout_height="55dp">

            <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvUserName"
                android:layout_weight="1"/>

            <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvRole"
                android:layout_weight="1"/>
        </LinearLayout>

        <Button
            android:text="@string/close_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancel_button"
            android:background="@drawable/button_square_one"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/White"
            android:textAllCaps="false"/>

    </LinearLayout>

</LinearLayout>