<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    android:id="@+id/content_sign_off"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ranchosoftware.speedymovinginventory.SignOffActivity"
    tools:showIn="@layout/activity_sign_off"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:text="Some Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvTitle"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textSize="24sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_weight="1">

            <AutoCompleteTextView
                android:id="@+id/tvCustomerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_name"
                android:maxLines="1"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"/>

        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_alignParentBottom="true"
            android:id="@+id/signatureForm">

            <com.github.gcacace.signaturepad.views.SignaturePad
                android:id="@+id/signature_pad"
                android:layout_width="match_parent"
                app:penColor="@android:color/black"
                android:background="@color/DimerGray"
                android:layout_height="200dp"/>

            <TextView
                android:text="X"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:layout_alignStart="@id/signature_pad"
                android:layout_alignBottom="@id/signature_pad"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="4dp"
                android:id="@+id/tvX"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:background="@color/Black"
                android:layout_below="@id/signature_pad"
                android:id="@+id/separator">

            </LinearLayout>

            <TextView
                android:text="@string/signature_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textSignature"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:layout_below="@id/separator"/>

            <TextView
                android:text="@string/sign_here"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvSignHere"
                android:textSize="24sp"
                android:layout_alignParentBottom="false"
                android:layout_alignBottom="@id/signature_pad"
                android:layout_marginBottom="12dp"
                android:layout_toRightOf="@id/tvX"
                android:layout_marginLeft="12dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonLayout"
                android:layout_below="@id/textSignature">

                <Button
                    android:text="@string/clear_pad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonClearPad"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"/>

                <Button
                    android:text="@string/accept"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonAcceptSignature"
                    android:layout_weight="1"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="8dp"/>
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
